Switched to buffered reader, dropped Scanner.
BufferedReader is still 10x faster!